# testCmake

./: CMakeLists.txt  CMakeTut-4.0-Linux.deb  clean.sh  link_library_run.sh  main.cpp
